# tensorclass

./: CMakeLists.txt  matvec.hpp  mytensortest.cpp  tensor.hpp  test_matvec.cpp  test_tensor.cpp
data/: tensor_out
